[gd_scene load_steps=16 format=3 uid="uid://dx41ce7ibf16c"]

[ext_resource type="Script" path="res://el_guitar.gd" id="1_j3ar6"]
[ext_resource type="AudioStream" uid="uid://bhqhsknvmrepb" path="res://Electric Guitar Quick Chords/AMAJOR.mp3" id="2_xnp5y"]
[ext_resource type="AudioStream" uid="uid://cw7hd1bprpifv" path="res://Electric Guitar Quick Chords/AMINOR.mp3" id="3_fob8n"]
[ext_resource type="AudioStream" uid="uid://5xuxhqsplj6i" path="res://Electric Guitar Quick Chords/BMAJOR.mp3" id="4_iil1j"]
[ext_resource type="AudioStream" uid="uid://c0ic5fqbuddnp" path="res://Electric Guitar Quick Chords/BMINOR.mp3" id="5_fqiaj"]
[ext_resource type="AudioStream" uid="uid://b8kkflojn5cpy" path="res://Electric Guitar Quick Chords/CMAJOR.mp3" id="6_4t44c"]
[ext_resource type="AudioStream" uid="uid://c1rcicp0s0ka3" path="res://Electric Guitar Quick Chords/CMINOR.mp3" id="7_ughgy"]
[ext_resource type="AudioStream" uid="uid://be338j03wd7wq" path="res://Electric Guitar Quick Chords/DMAJOR.mp3" id="8_csywk"]
[ext_resource type="AudioStream" uid="uid://cjtl6ksxigs8e" path="res://Electric Guitar Quick Chords/DMINOR.mp3" id="9_sodmq"]
[ext_resource type="AudioStream" uid="uid://cdehukeabhsd8" path="res://Electric Guitar Quick Chords/EMAJOR.mp3" id="10_p8j2t"]
[ext_resource type="AudioStream" uid="uid://d3brehr6hqk2b" path="res://Electric Guitar Quick Chords/EMINOR.mp3" id="11_ijh5n"]
[ext_resource type="AudioStream" uid="uid://ccvkeyxrl6ae1" path="res://Electric Guitar Quick Chords/FMAJOR.mp3" id="12_3yhtm"]
[ext_resource type="AudioStream" uid="uid://b1ghmma1gtqtm" path="res://Electric Guitar Quick Chords/FMINOR.mp3" id="13_bj0xf"]
[ext_resource type="AudioStream" uid="uid://b2223qp5b8cc3" path="res://Electric Guitar Quick Chords/GMAJOR.mp3" id="14_y6qpk"]
[ext_resource type="AudioStream" uid="uid://bwojxpaaq2f5u" path="res://Electric Guitar Quick Chords/GMINOR.mp3" id="15_h5go6"]

[node name="ElGuitar" type="Node2D"]
script = ExtResource("1_j3ar6")

[node name="Return" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1019.0
offset_top = 575.0
offset_right = 1126.0
offset_bottom = 625.0
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Return"

[node name="AMAJOR2" type="Button" parent="."]
offset_left = 145.0
offset_top = 110.0
offset_right = 200.0
offset_bottom = 166.0

[node name="AMAJOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xnp5y")

[node name="AMINOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="AMINOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fob8n")

[node name="BMAJOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="BMAJOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_iil1j")

[node name="BMINOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="BMINOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_fqiaj")

[node name="CMAJOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="CMAJOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4t44c")

[node name="CMINOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="CMINOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ughgy")

[node name="DMAJOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="DMAJOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_csywk")

[node name="DMINOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="DMINOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_sodmq")

[node name="EMAJOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="EMAJOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_p8j2t")

[node name="EMINOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="EMINOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ijh5n")

[node name="FMAJOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="FMAJOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_3yhtm")

[node name="FMINOR" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="FMINOR2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_bj0xf")

[node name="GMAJOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="GMAJOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_y6qpk")

[node name="GMINOR2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="GMINOR" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_h5go6")

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="button_down" from="AMAJOR2" to="." method="_on_amajor_2_button_down"]
